GS-7917 Partial fix for: - State/city error message does not show up on hover (and needs to be left-aligned with the S in the word State, for both city and state (error message for only either state or city will show up at any time). Working in IE7, FF3, and shows up in IE6, but if state error message is on page, changing state moves error message and icon to the right, and subsequent city error message shows up shifted to the right as well.

--- a/src/webapp/res/css/community/registration/chooserRegistration.css
+++ b/src/webapp/res/css/community/registration/chooserRegistration.css
@@ -152,6 +152,13 @@ div#topTextDivId ul li{
     margin-top:4px;
 }
 
+#chooserRegistration #schoolChoiceLocation div#stateCityWrapper div.locationDiv p.warning {
+    left: 95px;
+    position: absolute;
+    top: -16px;
+    width: 250px;
+}
+
 /* Form submission */
 
 #chooserRegistration #formSubmit {
